# rim-engine-DE-LU

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  rim_engine_4factor.ipynb
.github/workflows/: ci.yml  evaluation.yml
data/: de_load_data.csv  de_power_data.csv
docs/: api_contract.md  evaluation_metrics.md  evaluation_plan.md  examples.md  executive_brief.md  factors.md  integration_notes.md  output_schema.md  product.md  reference_run.md  regime_thresholds.md  runbook.md  validation.md
notebooks/: rim_engine_4factor.ipynb
outputs/: rim_timeseries.csv  risk_panel.json  risk_panel.md
scripts/: evaluate_historical.py  run_local.py  run_local.py.save
src/: __init__.py
src/rim_engine/: __main__.py  config.py  io.py  llm.py  panel.py  processing.py  regime_thresholds.py  regimes.py
src/rim_engine/util/: errors.py  logging.py
tests/: test_pipeline.py
