[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rim-engine-de-lu"
version = "0.1.0"
description = "RIM Engine: 4-factor risk regime index (PD/LD/RES/IMB) for DE-LU power market"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "python-dateutil>=2.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

lint.select = [
  "E",    # basic Python errors
  "F",    # undefined names, unused imports
  "I",    # import sorting
  "UP",   # Python syntax modernization
  "B",    # likely bugs
]

lint.ignore = [
  "E501", # line length handled by formatter
]

exclude = [
  ".venv",
  "dist",
  "build",
  ".git",
  "notebooks",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
